err/gbdx-task-template.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/gbdx_task_template'...
Compiling './lib/python3.5/site-packages/gbdx_task_template/base.py'...
***   File "./lib/python3.5/site-packages/gbdx_task_template/base.py", line 50
    print self.finalize('failed', str(exc_val))
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gbdx_task_template/schemas'...
Listing './lib/python3.5/site-packages/gbdx_task_template/test'...
Compiling './lib/python3.5/site-packages/gbdx_task_template/test/test_base.py'...
***   File "./lib/python3.5/site-packages/gbdx_task_template/test/test_base.py", line 22
    print "\n\tHello, World!"
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gbdx_task_template/test/test_task.py'...
***   File "./lib/python3.5/site-packages/gbdx_task_template/test/test_task.py", line 9
    print '=====', os.environ.get('REMOTE_WORK_PATH')
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gbdx_task_template-0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.4.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
